project/k8s/mqtt-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt-client
spec:
  selector:
    matchLabels:
      app: mqtt-client
  template:
    metadata:
      labels:
        app: mqtt-client
    spec:
      containers:
        - name: mqtt-client
          image: papaya147/mqtt-client:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
