project/k8s/mqtt-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt-server
spec:
  selector:
    matchLabels:
      app: mqtt-server
  template:
    metadata:
      labels:
        app: mqtt-server
    spec:
      containers:
        - name: mqtt-server
          image: papaya147/mqtt-server:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
