project/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prototype-ingress
  labels:
    name: prototype-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: prototype.test
      http:
        paths:
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: analytics-server
                port:
                  number: 8080
